# Copyright (c) 2021-2024 HPMicro
# SPDX-License-Identifier: BSD-3-Clause

cmake_minimum_required(VERSION 3.13)

# set(CONFIG_UART_CHANNEL 1)
# set(CONFIG_ENET_CHANNEL 1)
set(CONFIG_USB_DEVICE_CHANNEL 1)
# set(CONFIG_USB_HOST_CHANNEL 1)
# set(CONFIG_ECAT_FOE_CHANNEL 1)

set(HPM_SDK_NO_NANO_SPECS 1)

# set(SES_TOOLCHAIN_VARIANT "Andes")

string(FIND ${BOARD} "67" found)
if(${found} GREATER_EQUAL 0)
    set(CONFIG_USE_HPM6700 1)
    if(DEFINED SES_TOOLCHAIN_VARIANT)
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM6750/gcc/user_app_flash_xip.ld)
    else()
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM6750/segger/user_app_flash_xip.icf)
    endif()
endif()

string(FIND ${BOARD} "63" found)
if(${found} GREATER_EQUAL 0)
    set(CONFIG_USE_HPM6300 1)
    if(DEFINED SES_TOOLCHAIN_VARIANT)
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM6360/gcc/user_app_flash_xip.ld)
    else()
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM6360/segger/user_app_flash_xip.icf)
    endif()
endif()

string(FIND ${BOARD} "62" found)
if(${found} GREATER_EQUAL 0)
    set(CONFIG_USE_HPM6200 1)
    if(DEFINED SES_TOOLCHAIN_VARIANT)
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM6280/gcc/user_app_flash_xip.ld)
    else()
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM6280/segger/user_app_flash_xip.icf)
    endif()
endif()

string(FIND ${BOARD} "53" found)
if(${found} GREATER_EQUAL 0)
    set(CONFIG_USE_HPM5300 1)
    if(DEFINED SES_TOOLCHAIN_VARIANT)
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM5361/gcc/user_app_flash_xip.ld)
    else()
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM5361/segger/user_app_flash_xip.icf)
    endif()
endif()

string(FIND ${BOARD} "68" found)
if(${found} GREATER_EQUAL 0)
    set(CONFIG_USE_HPM6800 1)
    if(DEFINED SES_TOOLCHAIN_VARIANT)
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM6880/gcc/user_app_flash_xip.ld)
    else()
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM6880/segger/user_app_flash_xip.icf)
    endif()
endif()

string(FIND ${BOARD} "6e" found)
if(${found} GREATER_EQUAL 0)
    set(CONFIG_USE_HPM6E00 1)
    if(DEFINED SES_TOOLCHAIN_VARIANT)
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM6E80/gcc/user_app_flash_xip.ld)
    else()
    set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../linker/HPM6E80/segger/user_app_flash_xip.icf)
    endif()
endif()




if(DEFINED CONFIG_UART_CHANNEL)
    if (${CONFIG_UART_CHANNEL})
    endif()
endif()

if(DEFINED CONFIG_ECAT_FOE_CHANNEL)
    if (${CONFIG_ECAT_FOE_CHANNEL})
        set(CONFIG_EEPROM_EMULATION 1) # using flash to emulate eeprom
    endif()
endif()

if(DEFINED CONFIG_ENET_CHANNEL)
    if (${CONFIG_ENET_CHANNEL})
        set(CONFIG_ENET_PHY 1)
        set(CONFIG_LWIP 1)
        set(APP_USE_ENET_PORT_COUNT 1)
        #set(APP_USE_ENET_PHY_DP83867 1)
        set(APP_USE_ENET_PHY_RTL8211 1)
        #set(APP_USE_ENET_PHY_DP83848 1)
        # set(APP_USE_ENET_PHY_RTL8201 1)
    endif()
endif()

if(DEFINED CONFIG_USB_DEVICE_CHANNEL)
    if (${CONFIG_USB_DEVICE_CHANNEL})
        set(CONFIG_CHERRYUSB 1)
        set(CONFIG_USB_DEVICE 1)
        set(CONFIG_USB_DEVICE_MSC 1)
    endif()
endif()

if(DEFINED CONFIG_USB_HOST_CHANNEL)
    if (${CONFIG_USB_HOST_CHANNEL})
        set(CONFIG_TINYUSB 1)
        set(CONFIG_USB_HOST 1)
        set(CONFIG_TINYUSB_HOST 1)
        set(CONFIG_FATFS 1)
        set(CONFIG_USB_FATFS 1)
        set(CONFIG_USB_FATFS_TINYUSB 1)
        # sdk_compile_options("-Os")
    endif()
endif()

find_package(hpm-sdk REQUIRED HINTS $ENV{HPM_SDK_BASE})


sdk_compile_definitions(-DFLASH_XIP=1)
sdk_compile_definitions(-DBOARD_SHOW_CLOCK=0)
sdk_compile_definitions(-DBOARD_SHOW_BANNER=0)


if(DEFINED CONFIG_USE_HPM5300)
    if (${CONFIG_USE_HPM5300})
        sdk_compile_definitions("-DCONFIG_USE_HPM5300=1")
    endif()
endif()

if(DEFINED CONFIG_UART_CHANNEL)
    if (${CONFIG_UART_CHANNEL})
        sdk_compile_definitions("-DCONFIG_UART_CHANNEL=1")
        sdk_inc(../common/channel/uart/inc)
        sdk_app_src(../common/channel/uart/src/uart_xmodem.c)
        sdk_app_src(../common/channel/uart/src/uart.c)
    endif()
endif()

if(DEFINED CONFIG_ECAT_FOE_CHANNEL)
    if (${CONFIG_ECAT_FOE_CHANNEL})
        sdk_compile_definitions("-DCONFIG_ECAT_FOE_CHANNEL=1")
        # ECAT SSC stack
        sdk_inc(../common/channel/ecat/SSC/Src)
        sdk_src(../common/channel/ecat/SSC/Src/bootmode.c)
        sdk_src(../common/channel/ecat/SSC/Src/coeappl.c)
        sdk_src(../common/channel/ecat/SSC/Src/ecatappl.c)
        sdk_src(../common/channel/ecat/SSC/Src/ecatcoe.c)
        sdk_src(../common/channel/ecat/SSC/Src/ecatfoe.c)
        sdk_src(../common/channel/ecat/SSC/Src/ecatslv.c)
        sdk_src(../common/channel/ecat/SSC/Src/mailbox.c)
        sdk_src(../common/channel/ecat/SSC/Src/objdef.c)
        sdk_src(../common/channel/ecat/SSC/Src/sdoserv.c)
        sdk_src(../common/channel/ecat/SSC/Src/foeappl.c)

        # hpm ecat port
        sdk_inc(${HPM_SDK_BASE}/samples/ethercat/port)
        sdk_src(${HPM_SDK_BASE}/samples/ethercat/port/hpm_ecat_hw.c)
        sdk_src(${HPM_SDK_BASE}/samples/ethercat/port/hpm_ecat_phy.c)
        if(CONFIG_EEPROM_EMULATION)
        sdk_src(${HPM_SDK_BASE}/samples/ethercat/port/hpm_ecat_e2p_emulation.c)
        endif()
        sdk_src(${HPM_SDK_BASE}/samples/ethercat/port/hpm_ecat_foe.c)

        sdk_inc(../common/channel/ecat)
        sdk_src(../common/channel/ecat/ssc_application.c)
        sdk_src(../common/channel/ecat/ecat_foe_support.c)
        sdk_src(../common/channel/ecat/ecat_foe.c)
    endif()
endif()

if(DEFINED CONFIG_ENET_CHANNEL)
    if (${CONFIG_ENET_CHANNEL})
        sdk_compile_definitions("-DCONFIG_ENET_CHANNEL=1")
        sdk_compile_definitions(-D__DISABLE_AUTO_NEGO=0)
        sdk_compile_definitions(-D__ENABLE_ENET_RECEIVE_INTERRUPT=0)
        sdk_compile_definitions(-DLWIP_DHCP=0)

        sdk_inc(../common/channel/enet/ports/baremetal/single)
        sdk_inc(../common/channel/enet/ports/baremetal/single/arch)
        sdk_inc(../common/channel/enet/common/single)
        sdk_inc(../common/channel/enet/lwip_tcpecho/inc)
        sdk_inc(../common/channel/enet/lwip_tcpecho/inc/app)

        sdk_app_src(../common/channel/enet/ports/baremetal/single/arch/sys_arch.c)
        sdk_app_src(../common/channel/enet/ports/baremetal/single/ethernetif.c)
        sdk_app_src(../common/channel/enet/common/single/common.c)
        sdk_app_src(../common/channel/enet/common/single/netconf.c)
        sdk_app_src(../common/channel/enet/lwip_tcpecho/src/app/tcp_echo.c)
        sdk_app_src(../common/channel/enet/lwip_tcpecho/src/lwip.c)
    endif()
endif()

if(DEFINED CONFIG_USB_DEVICE_CHANNEL)
    if (${CONFIG_USB_DEVICE_CHANNEL})
        sdk_compile_definitions("-DCONFIG_USB_DEVICE_CHANNEL=1")

        sdk_inc(../common/channel/usb/config)
        sdk_app_src(../common/channel/usb/device/msc/ram_disk/src/device.c)
        sdk_app_src(../common/channel/usb/device/msc/ram_disk/src/msc_ram.c)
    endif()
endif()

if(DEFINED CONFIG_USB_HOST_CHANNEL)
    if (${CONFIG_USB_HOST_CHANNEL})
        sdk_compile_definitions("-DCONFIG_USB_HOST_CHANNEL=1")
        sdk_compile_definitions(-DCFG_TUSB_MCU=OPT_MCU_HPM)
        sdk_compile_definitions(-DUSB_HOST_MCU_CORE=HPM_CORE0)
        sdk_compile_definitions(-DUSB_FATFS_ENABLE)
        # sdk_compile_options("-Os")

        sdk_inc(../common/channel/usb/host/msc_udisk/inc)
        sdk_app_src(../common/channel/usb/host/msc_udisk/src/host.c)
        sdk_app_src(../common/channel/usb/host/msc_udisk/src/msc_app.c)
        sdk_app_src(../common/channel/usb/host/msc_udisk/src/file_op.c)
    endif()
endif()

project(user_app)

sdk_inc(inc)
sdk_inc(../common/include)
sdk_inc(../common/channel/inc)

sdk_app_src(../common/apphead/hpm_appheader.c)
sdk_app_src(../common/crypto/hpm_hashs.c)
sdk_app_src(../common/otamgr/hpm_ota.c)
sdk_app_src(../common/platform/hpm_platform.c)
sdk_app_src(src/hello_world.c)

generate_ses_project()
